--- a/config.json
+++ b/config.json
@@ -3,57 +3,65 @@
      "accuracy"
     ],
     "optimizer": "Adam",
-    "learning_rate" : 0.0001,
+    "learning_rate": 0.001,
     "loss": "SparseCategoricalCrossentropy",
     "layers": [
-     {
-      "type": "Conv2D",
-      "filters": 32,
-      "kernel_size": 3,
-      "activation": "relu"
-     },
-     {
-      "type": "MaxPooling2D",
-      "pool_size": [
-       2,
-       2
-      ]
-     },
-     {
-      "type": "Conv2D",
-      "filters": 64,
-      "kernel_size": 3,
-      "activation": "relu"
-     },
-     {
-      "type": "MaxPooling2D",
-      "pool_size": [
-       2,
-       2
-      ]
-     },
-     {
-      "type": "Conv2D",
-      "filters": 64,
-      "kernel_size": 3,
-      "activation": "relu"
-     },
-     {
-      "type": "Dropout",
-      "rate": 0.5
-     },
-     {
-      "type": "Flatten"
-     },
-     {
-      "type": "Dense",
-      "units": 100,
-      "activation": "relu"
-     }
-    ],
-    "epochs": 100,
+        {
+         "type": "Conv2D",
+         "filters": 32,
+         "kernel_size": 3,
+         "activation": "relu"
+        },
+        {
+         "type": "MaxPooling2D",
+         "pool_size": [
+          2,
+          2
+         ]
+        },
+        {
+         "type": "Conv2D",
+         "filters": 64,
+         "kernel_size": 3,
+         "activation": "relu"
+        },
+        {
+         "type": "MaxPooling2D",
+         "pool_size": [
+          2,
+          2
+         ]
+        },
+        {
+         "type": "Conv2D",
+         "filters": 64,
+         "kernel_size": 3,
+         "activation": "relu"
+        },
+        {
+         "type": "Dropout",
+         "rate": 0.5
+        },
+        {
+         "type": "Flatten"
+        },
+        {
+         "type": "Dense",
+         "units": 100,
+         "activation": "relu"
+        },
+        {
+         "type": "Dense",
+         "units": 50,
+         "activation": "relu"
+        }
+       ],
+    "epochs": 50,
     "validation_split": 0.1,
     "train_split": 0.8,
     "patience": 5,
-    "batch_size" : 32
+    "batch_size": 32,
+    "cross-validation" : false,
+    "predict-kaggle" : false,
+    "ensemble" : true
    }
